--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ html, body {
 
 html {
 scroll-behavior: smooth;
-}  
+}
+
+a{
+    color:black;
+}
 
 .navigation, .hero-section{
     width: 70%;
@@ -185,4 +189,31 @@ scroll-behavior: smooth;
 
 #contactContent.show{
     max-height: 126.8px; 
+}
+
+/* styles for internship-work.html */
+#inContent{
+    background-color: #FEFAE0;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.cancelBtnContainer {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.cancelBtnContainer i{
+    font-size:30px;
+    padding:15px;
+}
+
+#inTitle {
+    text-align: center;
+    font-size: 100px;
+}
+
+#inDescription{
+    font-size:35px;
+    margin: 35px 70px;
 }
