--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a{
     color:black;
 }
 
-.navigation, .hero-section{
+nav, .hero-section{
     width: 70%;
     margin: 0 auto;
 }
@@ -148,7 +148,7 @@ a{
     margin-bottom: 5px;
 }
 
-.footer p{
+footer p{
     text-align: center;
     font-size: 1.56rem;
     margin-top: 100px;
@@ -310,7 +310,7 @@ a{
     .lang-JP #heroText {
         font-size: 1.56rem;
     }
-    .icon-large, #languageBtn, .footer p {
+    .icon-large, #languageBtn, footer p {
         font-size: 1.25rem;
     }
     .main-title{
@@ -318,7 +318,7 @@ a{
         height:60px;
         line-height:60px;
     }
-    .navigation, .hero-section {
+    nav, .hero-section {
         width: 85%;
     }
     #aboutContent.show, #worksContent.show, #skillsContent.show, #resumeContent.show, #contactContent.show {
@@ -393,7 +393,7 @@ a{
     .lang-JP #heroText {
         font-size: 1.56rem;
     }
-    .icon-large, #languageBtn, .footer p {
+    .icon-large, #languageBtn, footer p {
         font-size: 1.25rem;
     }
     .main-title{
@@ -401,7 +401,7 @@ a{
         height:60px;
         line-height:60px;
     }
-    .navigation, .hero-section {
+    nav, .hero-section {
         width: 85%;
     }
     #aboutContent.show, #worksContent.show, #skillsContent.show, #resumeContent.show, #contactContent.show {
@@ -475,7 +475,7 @@ a{
     .lang-JP #heroText {
         font-size: 1.87rem;
     }
-    .icon-large, #languageBtn, .footer p {
+    .icon-large, #languageBtn, footer p {
         font-size: 1.37rem;
     }
     .main-title{
@@ -483,7 +483,7 @@ a{
         height:75px;
         line-height:75px;
     }
-    .navigation, .hero-section {
+    nav, .hero-section {
         width: 82%;
     }
     
@@ -547,7 +547,7 @@ a{
     .lang-JP #heroText {
         font-size: 2.18rem;
     }
-    .icon-large, #languageBtn, .footer p {
+    .icon-large, #languageBtn, footer p {
         font-size: 1.5rem;
     }
     .main-title{
@@ -555,7 +555,7 @@ a{
         height:80px;
         line-height:80px;
     }
-    .navigation, .hero-section {
+    nav, .hero-section {
         width: 80%;
     }
     
